--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,4 +103,4 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
-@import "media/media";
+//@import "media/media";
