--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,15 +5,15 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --blue: #007bff;
+  --blue: #003681;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #dc3545;
+  --red: #de0037;
   --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
+  --yellow: #ffb600;
+  --green: #007254;
+  --teal: #3bc28a;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
@@ -24,8 +24,8 @@
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
+  --light: #f4f5f7;
+  --dark: #1c1c1c;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
